[tool.poetry]
name = "dobby"
version = "0.1.17"
description = "Dobby is a CI/CD helper to deploy templated (jinja2) tasks to Nomad"
authors = ["Florian Apolloner <florian@apolloner.eu>"]
license = "BSD-3-Clause"

homepage = "https://github.com/apollo13/dobby"
repository = "https://github.com/apollo13/dobby"

classifiers = [
    "License :: OSI Approved :: BSD License",
]

[tool.poetry.scripts]
dobby = 'dobby.cli:main'

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
jinja2 = "^2.11.2"
httpx = "^0.16.0"
click = "^7.1.2"
colorama = "^0.4.4"
PyYAML = "^5.3.1"
importlib_metadata = { version = "^2.0.0", python = "<3.8" }
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
flake8-bugbear = "^20.1.4"
pex = "2.1.19"
bump2version = "^1.0.1"
pyinstaller = "^4.0"
pytest = "^6.1.1"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
